[package]
name = "mllt"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
handlebars = "6.3.1"
hashbrown = { version = "0.15.2", features = ["serde"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
