[package]
name = "mllt"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
handlebars = "6.3.1"
hashbrown = { version = "0.15.2", features = ["serde"] }
ignore = "0.4.23"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_regex = "1.1.0"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
